Enable running integration tests